# distributed-id-indexer

./: Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: build-code.yaml
crates/http/: .env.example  Cargo.toml  Dockerfile  README.md
crates/http/src/: main.rs
crates/http/src/config/: env.rs
crates/http/src/controller/: data.rs  mod.rs
crates/http/src/libs/: jwt.rs  mod.rs  redis.rs
crates/pubsub/: Cargo.toml  Dockerfile  README.md
crates/pubsub/src/: main.rs
crates/pubsub/src/config/: env.rs
crates/pubsub/src/functions/: pubsub.rs
crates/pubsub/src/libs/: redis.rs
src/: main.rs
src/config/: env.rs
src/controller/: root.rs
src/libs/: http.rs  redis.rs
